# cuda_minors

./: .gitignore  CMakeLists.txt  README.md  cmakeLibQuickStart.cu  cudaMinors.cu
src/include/: device_minors.cuh  kernels.cuh
src/lib/: device_minors.cu  kernels.cu
test/: CMakeLists.txt  test_simple_dets.cu
